force-app/main/default/objects/FilingDeficiency__c/FilingDeficiency__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC100518 - Created for BREG phase 1</description>
    <label>Filing Deficiency</label>
    <nameField>
        <displayFormat>FDF-{0000}</displayFormat>
        <label>Filing Deficiency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filing Deficiencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>