force-app/main/default/objects/FilingDeficiency__c/fields/Deficiency__c.field-meta.xml
<CustomField>
    <fullName>Deficiency__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Deficiency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Deficiency__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Filing</value>
        </filterItems>
        <filterItems>
            <field>Deficiency__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Deficiency__c</referenceTo>
    <relationshipLabel>Filing Deficiencies</relationshipLabel>
    <relationshipName>Filing_Deficiencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>