force-app/main/default/objects/FilingDeficiency__c/fields/Filing__c.field-meta.xml
<CustomField>
    <fullName>Filing__c</fullName>
    <description>PacPoint-IC100818 - Created for BREG phase 1</description>
    <label>Filing</label>
    <referenceTo>Filing__c</referenceTo>
    <relationshipLabel>Filing Deficiencies</relationshipLabel>
    <relationshipName>Filing_Deficiencies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>