force-app/main/default/objects/FilingDeficiency__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>PacPoint-IC101718 - Created for BREG phase 1</description>
    <formula>Deficiency__r.RecordType.Name</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>